[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/RandomLoncatingBarrel/CrazyBarrel2Droom.gd" type="Script" id=1]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-BI.ttf" type="FontFile" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/RandomLoncatingBarrel/SparePart/PrussieButtonChanceAnezic.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Built/Ubuntu_B_72.tres" type="FontFile" id=4]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/RandomLoncatingBarrel/SparePart/BarrelSetupController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/EfekSuara/133283__leszek-szary__game-over.wav" type="AudioStream" id=6]



[sub_resource type="FontFile" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
size = 48
outline_size = 1
outline_color = Color( 0.168627, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="CrazyBarrel2Droom" type="Node2D"]
process_mode = 2
script = ExtResource( 1 )

[node name="UI-Standpoint" type="CanvasLayer" parent="."]
process_mode = 2
layer = -1

[node name="UI Game" type="Control" parent="UI-Standpoint"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contains" type="VBoxContainer" parent="UI-Standpoint/UI Game"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI-Standpoint/UI Game/Contains"]
self_modulate = Color( 1, 0, 0, 0.392157 )
offset_top = 261.0
offset_right = 1920.0
offset_bottom = 511.0
custom_minimum_size = Vector2( 0, 250 )
mouse_filter = 2

[node name="Display" type="CenterContainer" parent="UI-Standpoint/UI Game/Contains/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI-Standpoint/UI Game/Contains/Panel/Display"]
offset_left = 632.0
offset_top = 80.0
offset_right = 1287.0
offset_bottom = 170.0
theme_override_fonts/font = ExtResource( 4 )
text = "Barrel Guess Game"

[node name="BarrelSetupController" parent="UI-Standpoint/UI Game/Contains" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 515.0
offset_right = 1920.0
offset_bottom = 665.0

[node name="ButtonSetsAccountable" type="HBoxContainer" parent="UI-Standpoint/UI Game/Contains"]
offset_top = 669.0
offset_right = 1920.0
offset_bottom = 819.0
custom_minimum_size = Vector2( 0, 150 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="PrussieButtonChanceAnezic" parent="UI-Standpoint/UI Game/Contains/ButtonSetsAccountable" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 316.0
offset_bottom = 150.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )

[node name="PrussieButtonChanceAnezic2" parent="UI-Standpoint/UI Game/Contains/ButtonSetsAccountable" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 320.0
offset_right = 636.0
offset_bottom = 150.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )

[node name="PrussieButtonChanceAnezic3" parent="UI-Standpoint/UI Game/Contains/ButtonSetsAccountable" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 640.0
offset_right = 956.0
offset_bottom = 150.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )

[node name="PrussieButtonChanceAnezic4" parent="UI-Standpoint/UI Game/Contains/ButtonSetsAccountable" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 960.0
offset_right = 1276.0
offset_bottom = 150.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )

[node name="PrussieButtonChanceAnezic5" parent="UI-Standpoint/UI Game/Contains/ButtonSetsAccountable" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1280.0
offset_right = 1596.0
offset_bottom = 150.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )

[node name="PrussieButtonChanceAnezic6" parent="UI-Standpoint/UI Game/Contains/ButtonSetsAccountable" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1600.0
offset_right = 1920.0
offset_bottom = 150.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )

[node name="BarrelSpeaker" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="HPlagWorkaround" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="SendButtonNumbers" from="UI-Standpoint/UI Game/Contains/BarrelSetupController" to="." method="_on_BarrelSetupController_SendButtonNumbers"]
[connection signal="resetBarrelgame" from="UI-Standpoint/UI Game/Contains/BarrelSetupController" to="." method="_on_BarrelSetupController_resetBarrelgame"]
[connection signal="timeout" from="HPlagWorkaround" to="." method="_on_HPlagWorkaround_timeout"]
